[project]
name = "lizard-spock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kj4tmp@gmail.com", email = "kj4tmp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.12.7",
]

[project.scripts]
lizard-spock = "lizard_spock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
